log
Mon Oct 19 13:37:38 UTC 2020: 
 heap.c | 11 ++++++++---
 1 file changed, 8 insertions(+), 3 deletions(-)
In file included from test.c:4:0:
heap.c: In function ‘createHeap’:
heap.c:38:63: error: stray ‘\303’ in program
   heap->heapArray = (heapElem *) calloc (5, sizeof(heapElem));ç
                                                               ^
heap.c:38:64: error: stray ‘\247’ in program
   heap->heapArray = (heapElem *) calloc (5, sizeof(heapElem));ç
                                                                ^
Compilation failed
Mon Oct 19 13:37:42 UTC 2020: 
 heap.c | 11 ++++++++---
 1 file changed, 8 insertions(+), 3 deletions(-)
In file included from test.c:4:0:
heap.c: In function ‘createHeap’:
heap.c:38:63: error: stray ‘\303’ in program
   heap->heapArray = (heapElem *) calloc (5, sizeof(heapElem));ç
                                                               ^
heap.c:38:64: error: stray ‘\247’ in program
   heap->heapArray = (heapElem *) calloc (5, sizeof(heapElem));ç
                                                                ^
Compilation failed
Mon Oct 19 13:38:00 UTC 2020: 
 heap.c | 11 ++++++++---
 1 file changed, 8 insertions(+), 3 deletions(-)
In file included from test.c:4:0:
heap.c: In function ‘createHeap’:
heap.c:38:63: error: stray ‘\303’ in program
   heap->heapArray = (heapElem *) calloc (4, sizeof(heapElem));ç
                                                               ^
heap.c:38:64: error: stray ‘\247’ in program
   heap->heapArray = (heapElem *) calloc (4, sizeof(heapElem));ç
                                                                ^
Compilation failed
Mon Oct 19 13:38:31 UTC 2020: 
 heap.c | 11 ++++++++---
 1 file changed, 8 insertions(+), 3 deletions(-)
In file included from test.c:4:0:
heap.c: In function ‘createHeap’:
heap.c:38:63: error: stray ‘\303’ in program
   heap->heapArray = (heapElem *) calloc (1, sizeof(heapElem));ç
                                                               ^
heap.c:38:64: error: stray ‘\247’ in program
   heap->heapArray = (heapElem *) calloc (1, sizeof(heapElem));ç
                                                                ^
Compilation failed
Mon Oct 19 13:39:48 UTC 2020: 
 heap.c | 11 ++++++++---
 1 file changed, 8 insertions(+), 3 deletions(-)
In file included from test.c:4:0:
heap.c: In function ‘createHeap’:
heap.c:38:60: error: stray ‘\303’ in program
   heap->heapArray = (heapElem *) malloc (sizeof(heapElem));ç
                                                            ^
heap.c:38:61: error: stray ‘\247’ in program
   heap->heapArray = (heapElem *) malloc (sizeof(heapElem));ç
                                                             ^
Compilation failed
Mon Oct 19 13:44:53 UTC 2020: 
 heap.c | 11 ++++++++---
 1 file changed, 8 insertions(+), 3 deletions(-)
 tests:  0|4
total_score: 0/70
d572dd0
